formatted colours and button to match designs. Need to work on bug with div grid line spacing not matching the result when 'shake' is selected.

--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,41 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #3A3A3A;
+
   }
 
   #outer-box{
-    margin:auto;
+
+    
+    margin-top: 60px;
     width: 600px;
-    height:600px;
-
-
-    background: red; 
+    height: 600px;
+    margin-left:50px;
+    background: #FC5E5E; 
     display: grid;
     place-items: center;
     border-radius:10px;
+    
     
     }
 
 
 
 #main{
-    max-width: 600px;
-    max-height:600px;
+    
+    width: 500px;
+    height:500px;
     display: grid;
-    grid-template-columns: 6.25% 6.25%  6.25% 6.25%  6.25% 6.25%  6.25% 6.25%  6.25% 6.25%  6.25% 6.25%  6.25% 6.25%  6.25% 6.25%;
-    float: left;       
+    grid-template-columns: repeat(20, 5%);
+    float: left;    
+    
+   
+  
 }
 
 .usual-class{
-    background: #D3D3D3;
-    border-radius:2px;
+    background: #CBC0C0;
+    cursor: crosshair;
 }
 
 
@@ -35,15 +43,31 @@
     text-align: center;  
     display: block;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    background: #FC5E5E;
+    border-radius: 12px;
+    width: 149px;
+    height: 47px;
+    border: 0px;
+    font-size: 18px;
+    font-weight: 700px;
+    color: #FFFFFF;
+    font-stretch: semi-expanded;
+    position:absolute;
+    left:270px;
+    transition: ease-in;
     
 }
 
-h1{
-    margin-top:20px;
-    text-align:center;
-    font-size: 300%;
+#clear:hover{
+    transition-delay: 0.1s;
+    transform: scale(1.2);
+    cursor:pointer;
 }
+
+
+
+
 
 
 
